PFM-3780::Horizontal Bar chart Alignment fixes (#5606)
* PFM-3780::Horizontal Bar chart Alignment fixes

* Update README

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/dss.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/dss.scss
@@ -258,6 +258,6 @@ border-color: rgba(244, 119, 56, var(--border-opacity));
 }
 
 .dss-horizontal-v2{
-  width: 25%;
-  max-width: 25%;
+  width: 21%;
+  max-width: 21%;
 }
